--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,7 @@
         android:id="@+id/cardViewOuter"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -118,9 +119,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
-                android:textSize="14sp"
                 android:gravity="center"
                 android:text="sparet"
+                android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="@+id/pieChart"
                 app:layout_constraintStart_toStartOf="@+id/pieChart"
                 app:layout_constraintTop_toBottomOf="@+id/literSaved" />
@@ -149,6 +150,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:textSize="14sp"
                 android:gravity="center"
                 android:text="xD"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -162,8 +164,8 @@
                 android:layout_height="0dp"
                 android:layout_marginStart="8dp"
                 android:gravity="end"
-                android:textSize="14sp"
                 android:text="13.5"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="@+id/flowView"
                 app:layout_constraintEnd_toStartOf="@+id/literMinute"
                 app:layout_constraintStart_toEndOf="@+id/flowView"
@@ -174,9 +176,9 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginStart="8dp"
-                android:textSize="14sp"
                 android:gravity="end"
                 android:text="10:34"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="@+id/timeView"
                 app:layout_constraintEnd_toStartOf="@+id/timeTotal"
                 app:layout_constraintStart_toEndOf="@+id/timeView"
@@ -186,10 +188,10 @@
                 android:id="@+id/moneyUsed"
                 android:layout_width="0dp"
                 android:layout_height="19dp"
-                android:textSize="14sp"
                 android:layout_marginStart="8dp"
                 android:gravity="end"
                 android:text="10,24"
+                android:textSize="14sp"
                 app:layout_constraintEnd_toStartOf="@+id/moneySpent"
                 app:layout_constraintStart_toEndOf="@+id/moneyView"
                 app:layout_constraintTop_toTopOf="@+id/moneyView" />
@@ -200,10 +202,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="0dp"
-                android:textSize="14sp"
                 android:gravity="start"
                 android:paddingLeft="0dp"
                 android:text="Flow"
+                android:textSize="14sp"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
                 app:layout_constraintTop_toTopOf="@+id/imageView" />
 
@@ -213,10 +215,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="0dp"
-                android:textSize="14sp"
                 android:gravity="start"
                 android:paddingLeft="0dp"
                 android:text="Pris"
+                android:textSize="14sp"
                 app:layout_constraintStart_toEndOf="@+id/imageView3"
                 app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
@@ -227,9 +229,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:gravity="start"
-                android:textSize="14sp"
                 android:paddingLeft="0dp"
                 android:text="Tid"
+                android:textSize="14sp"
                 app:layout_constraintStart_toEndOf="@+id/imageView2"
                 app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
@@ -241,7 +243,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:background="@color/primary_white"
-                android:onClick="buttonClick"
+                android:onClick="leftClick"
                 android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.15"
@@ -257,6 +259,7 @@
                 android:layout_marginTop="8dp"
                 android:background="@color/primary_white"
                 android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
+                android:onClick="rightClick"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.85"
                 app:layout_constraintStart_toStartOf="parent"
@@ -347,8 +350,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:textSize="14sp"
                 android:text=" l/min"
+                android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.95"
                 app:layout_constraintStart_toStartOf="parent"
@@ -359,8 +362,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:textSize="14sp"
                 android:text=" sekunder"
+                android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.95"
                 app:layout_constraintStart_toStartOf="parent"
@@ -371,8 +374,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:textSize="14sp"
                 android:text=" kr"
+                android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.95"
                 app:layout_constraintStart_toStartOf="parent"
