--- a/app/src/main/res/layout/tab_fragment2.xml
+++ b/app/src/main/res/layout/tab_fragment2.xml
@@ -168,7 +168,7 @@
                         android:layout_marginStart="8dp"
                         android:gravity="start"
                         android:paddingLeft="0dp"
-                        android:text="Flow"
+                        android:text="Vand"
                         android:textSize="14sp"
                         app:layout_constraintStart_toEndOf="@+id/imageView"
                         app:layout_constraintTop_toTopOf="@+id/imageView" />
@@ -268,7 +268,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
-                        android:text=" l/min"
+                        android:text=" Liter"
                         android:textSize="14sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.95"
@@ -362,7 +362,7 @@
                         android:layout_marginStart="8dp"
                         android:gravity="start"
                         android:paddingLeft="0dp"
-                        android:text="Flow"
+                        android:text="Vand"
                         android:textSize="14sp"
                         app:layout_constraintStart_toEndOf="@+id/imageViewGennemsnit"
                         app:layout_constraintTop_toTopOf="@+id/imageViewGennemsnit" />
@@ -464,7 +464,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
-                        android:text=" l/min"
+                        android:text=" Liter"
                         android:textSize="14sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.95"
