--- a/app/src/main/res/layout/tab_fragment1.xml
+++ b/app/src/main/res/layout/tab_fragment1.xml
@@ -290,8 +290,7 @@
                 android:layout_marginTop="16dp"
                 android:paddingEnd="5dp"
                 android:paddingStart="0dp"
-                android:src="@drawable/ic_water"
-                android:tint="@color/grey_text"
+                android:src="@drawable/ic_shape"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.05"
