--- a/app/src/main/res/layout/tab_fragment2.xml
+++ b/app/src/main/res/layout/tab_fragment2.xml
@@ -241,8 +241,8 @@
 
                     <ImageView
                         android:id="@+id/imageView"
-                        android:layout_width="25dp"
-                        android:layout_height="22dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="1dp"
                         android:layout_marginTop="8dp"
                         android:paddingEnd="5dp"
@@ -407,8 +407,8 @@
 
                     <ImageView
                         android:id="@+id/imageViewGennemsnit"
-                        android:layout_width="25dp"
-                        android:layout_height="22dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
                         android:layout_marginStart="1dp"
                         android:layout_marginTop="16dp"
